--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
   },
   "homepage": "https://github.com/munyaradzichiondegwa/vision-2030-platform#readme",
   "devDependencies": {
-    "@types/node": "^22.13.9"
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.13.9",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6"
   }
 }
