--- a/package.json
+++ b/package.json
@@ -26,10 +26,17 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.1",
+    "compression": "^1.8.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "helmet": "^8.0.0",
+    "mongoose": "^8.12.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
-    "vision-2030-platform": "file:"
+    "vision-2030-platform": "file:",
+    "winston": "^3.17.0"
   },
   "repository": {
     "type": "git",
@@ -40,9 +47,15 @@
   },
   "homepage": "https://github.com/munyaradzichiondegwa/vision-2030-platform#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.9",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.6"
+    "ts-jest": "^29.2.6",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.8.2"
   }
 }
