--- a/package.json
+++ b/package.json
@@ -23,20 +23,35 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@opentelemetry/auto-instrumentations-node": "^0.56.1",
+    "@opentelemetry/exporter-jaeger": "^1.30.1",
+    "@opentelemetry/sdk-node": "^0.57.2",
+    "@sentry/node": "^9.4.0",
+    "@sentry/profiling-node": "^9.4.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "axios": "^1.8.1",
+    "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
+    "nodemailer": "^6.10.0",
+    "prom-client": "^15.1.3",
+    "rate-limit-redis": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "vision-2030-platform": "file:",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "zod": "^3.24.2"
   },
   "repository": {
     "type": "git",
@@ -47,15 +62,26 @@
   },
   "homepage": "https://github.com/munyaradzichiondegwa/vision-2030-platform#readme",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.9",
+    "@types/nodemailer": "^6.4.17",
+    "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "autocannon": "^8.0.0",
     "cross-env": "^7.0.3",
+    "eslint": "^9.21.0",
     "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.2.6",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.26.0"
   }
 }
