--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
   "license": "MIT",
   "type": "module",
   "dependencies": {
+    "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.56.1",
     "@opentelemetry/exporter-jaeger": "^1.30.1",
+    "@opentelemetry/node": "^0.24.0",
     "@opentelemetry/sdk-node": "^0.57.2",
     "@sentry/node": "^9.4.0",
     "@sentry/profiling-node": "^9.4.0",
@@ -33,12 +35,16 @@
     "axios": "^1.8.1",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.0",
+    "consul": "^2.0.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.0.0",
+    "http-proxy-middleware": "^3.0.3",
+    "ioredis": "^5.6.0",
+    "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
@@ -51,6 +57,7 @@
     "swagger-ui-express": "^5.0.1",
     "vision-2030-platform": "file:",
     "winston": "^3.17.0",
+    "winston-elasticsearch": "^0.19.0",
     "zod": "^3.24.2"
   },
   "repository": {
@@ -63,9 +70,12 @@
   "homepage": "https://github.com/munyaradzichiondegwa/vision-2030-platform#readme",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/consul": "^0.40.3",
     "@types/cors": "^2.8.17",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.14",
+    "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.9",
