--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "ioredis": "^5.6.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "limiter": "^3.0.0",
     "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "prom-client": "^15.1.3",
@@ -74,6 +75,7 @@
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/helmet": "^0.0.48",
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "^4.0.9",
     "@types/jsonwebtoken": "^9.0.9",
@@ -83,6 +85,7 @@
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
+    "@types/winston": "^2.4.4",
     "autocannon": "^8.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.21.0",
